--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -7,7 +7,7 @@ output:
     toc: true
     toc_depth: 3
 vignette: >
-  %\VignetteIndexEntry{Get started}
+  %\VignetteIndexEntry{Get started with the jfa package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteDepends{jfa}
   %\VignetteKeywords{audit, evaluation, jfa, planning, sampling}
